- Project refactoring to have the module structure required by   setuptools - Added installation script setup.py - Added metadata files for setuptools

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-*.pyc
 .directory
 *.original
 .DS_*
 .idea
+
+# Compiled python modules.
+*.pyc
+
+# Setuptools distribution folder.
+dist
+build
+
+# Python egg metadata, regenerated from source files by setuptools.
+*.egg-info
+*.egg
